--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 	<head>
-		<title>Module 01</title>
+		<title></title> eMB 
 	</head>
 	<body>
 		<h1>Module 01:  Introduction to HTML</h2>
@@ -27,7 +27,7 @@
 			<img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/cornflake-cake-f773778.jpg?quality=90&amp;resize=440,400" alt="Easy cornflake tart cut into slices and served with custard" title="Easy cornflake tart"
 			<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2015/10/2/0/WU1111H_Brownie-Cookies_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532375245236.jpeg" title="Brownie Cookies" />
 			<img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/floating-island-3a8b98b.jpg?quality=90&amp;resize=440,400" alt="White Claw Black Cherry Cupcakes
-" title="White Claw Black Cherry Cupcakes" />
+"title="White Claw Black Cherry Cupcakes" />
 		</p>
 	</body>
 </html>
