--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 	<head>
-		<title>Module 01</title>
+		<title></title> eMB 
 	</head>
 	<body>
 		<h1>Module 01:  Introduction to HTML</h2>
